--- a/LITRevu/app/templates/errors/404.html
+++ b/LITRevu/app/templates/errors/404.html
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Not Found</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load static %}
+{% block title %}LITRevu - 404{% endblock %}
+{% block optional_css %}
+<link rel="stylesheet" href="{% static 'css/errors_styles.css' %}">
+{% endblock %}
+{% block content %}
     <h1>404 - Page Not Found</h1>
     <p>Sorry, the page you are looking for does not exist.</p>
     <a href="/">Go to Home</a>
-</body>
-</html>
+{% endblock %}
