--- a/LITRevu/users/templates/register.html
+++ b/LITRevu/users/templates/register.html
@@ -1,13 +1,10 @@
+{% extends 'base_template.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Registration</title>
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-</head>
-<body>
+{% block title %}LITRevu - Register{% endblock %}
+{% block optional_css %}
+<link rel="stylesheet" href="{% static 'css/users_styles.css' %}">
+{% endblock %}
+{% block content %}
     <h2>User Registration</h2>
     <form action="/register/" method="post">
         {% csrf_token %}
@@ -22,5 +19,4 @@
 
         <input type="submit" value="Register">
     </form>
-</body>
-</html>
+{% endblock %}
