UserCreationForm override to add email

--- a/LITRevu/app/templates/base_template.html
+++ b/LITRevu/app/templates/base_template.html
@@ -46,7 +46,9 @@
     <p>&copy; 2024 My Website</p>
 </footer>
 
-<!-- Scripts -->
+<!-- Scripts --> 
 <Scripts></Scripts>
+{% block js %}
+{% endblock %}
 </body>
 </html>
