--- a/LITRevu/users/templates/register.html
+++ b/LITRevu/users/templates/register.html
@@ -6,10 +6,14 @@
 {% endblock %}
 {% block content %}
     <h2>User Registration</h2>
-    <form action="/register/" method="post">
+    <form id="registration-form" action="/register/" method="post">
         {% csrf_token %}
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required>
+        <span class="error-message" id="username-error"></span>
 
         <label for="password1">Password:</label>
         <input type="password" id="password1" name="password1" required>
@@ -19,4 +23,7 @@
 
         <input type="submit" value="Register">
     </form>
+{% endblock %}
+{% block js %}
+<script src="{% static 'js/users_script.js' %}"></script>
 {% endblock %}
