--- a/LITRevu/app/templates/base_template.html
+++ b/LITRevu/app/templates/base_template.html
@@ -18,7 +18,6 @@
     <link rel="icon" href="{% static 'images/litrevulogotitleless.PNG' %}" type="image/x-icon">
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="#317EFB">
-
 </head>
 <body>
 
@@ -27,15 +26,25 @@
     <nav>
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="/login/">Login</a></li>
-            <li><a href="/logout/">Logout</a></li>
-            <li><a href="/register/">Register</a></li>
             <li><a href="/article/">Article</a></li>
+            {% if user.is_authenticated %}
+            <li><a href="/logout/">Logout</a></li>
+            {% else %}
+            <li><a href="/login/">Login</a></li>
+            <li><a href="/register/">Register</a></li>
+            {% endif %}
         </ul>
     </nav>
 </header>
 
 <main>
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message|safe }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
     <!-- Content specific to each page will be inserted here -->
     {% block content %}
     {% endblock %}
