--- a/LITRevu/users/templates/login.html
+++ b/LITRevu/users/templates/login.html
@@ -6,12 +6,25 @@
 {% endblock %}
 {% block content %}
     <h1>Login</h1>
-    <form method="post">
+    <form id="login-form" action="{% url 'login' %}" method="post">
         {% csrf_token %}
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username"><br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password"><br>
+        <div>
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" value="{{ form.username.value|default:'' }}" required>
+            {% if form.username.errors %}
+                <div class="error">{{ form.username.errors }}</div>
+            {% endif %}
+        </div>
+        <div>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+            {% if form.password.errors %}
+                <div class="error">{{ form.password.errors }}</div>
+            {% endif %}
+        </div>
+        {% if form.non_field_errors %}
+            <div class="error">{{ form.non_field_errors }}</div>
+        {% endif %}
         <button type="submit">Login</button>
     </form>
 {% endblock %}
