--- a/LITRevu/app/templates/base_template.html
+++ b/LITRevu/app/templates/base_template.html
@@ -28,6 +28,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="/article/">Article</a></li>
             {% if user.is_authenticated %}
+            <li><a href="/profile/">Profile</a></li>
             <li><a href="/logout/">Logout</a></li>
             {% else %}
             <li><a href="/login/">Login</a></li>
