--- a/LITRevu/articles/templates/article_detail.html
+++ b/LITRevu/articles/templates/article_detail.html
@@ -9,8 +9,12 @@
 {% block content %}
 <h1>{{ article.title }}</h1>
 <p>{{ article.content }}</p>
-<p>By {{ article.author }} on {{ article.created_at }}</p>
-<a href="{% url 'article_update' article.pk %}">Edit</a>
-<a href="{% url 'article_delete' article.pk %}">Delete</a>
+<p>By {{ article.author.username|default:"Anonymous" }} on {{ article.created_at }}</p>
+{% if request.user.is_authenticated %}
+  {% if request.user == article.author or request.user.is_superuser %}
+    <a href="{% url 'article_update' article.pk %}">Edit</a>
+    <a href="{% url 'article_delete' article.pk %}">Delete</a>
+  {% endif %}
+{% endif %}
 <a href="{% url 'article_list' %}">Back to Articles</a>
 {% endblock %}
