--- a/LITRevu/app/templates/base_template.html
+++ b/LITRevu/app/templates/base_template.html
@@ -29,6 +29,7 @@
             <li><a href="/">Home</a></li>
             <li><a href="/profile/">Profile</a></li>
             <li><a href="/logout/">Logout</a></li>
+            <li><a href="/users/">Users</a></li>
             {% else %}
             <li><a href="/login/">Login</a></li>
             <li><a href="/register/">Register</a></li>
