--- a/LITRevu/reviews/templates/review_form.html
+++ b/LITRevu/reviews/templates/review_form.html
@@ -10,8 +10,54 @@
 <h1>{% if form.instance.pk %}Edit{% else %}New{% endif %} Review</h1>
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form.non_field_errors }}
+    
+    <div class="fieldWrapper">
+        <label for="{{ form.title.id_for_label }}">Title:</label>
+        {{ form.title }}
+        {{ form.title.errors }}
+    </div>
+
+    <div class="fieldWrapper">
+        <label for="{{ form.content.id_for_label }}">Content:</label>
+        {{ form.content }}
+        {{ form.content.errors }}
+    </div>
+
+    <div class="fieldWrapper">
+        <label for="id_rating">Rating:</label>
+        <div class="stars">
+            <input class="star star-5" id="star-5" type="radio" name="rating" value="5">
+            <label class="star star-5" for="star-5"></label>
+            <input class="star star-4" id="star-4" type="radio" name="rating" value="4">
+            <label class="star star-4" for="star-4"></label>
+            <input class="star star-3" id="star-3" type="radio" name="rating" value="3">
+            <label class="star star-3" for="star-3"></label>
+            <input class="star star-2" id="star-2" type="radio" name="rating" value="2">
+            <label class="star star-2" for="star-2"></label>
+            <input class="star star-1" id="star-1" type="radio" name="rating" value="1">
+            <label class="star star-1" for="star-1"></label>
+        </div>
+    </div>
+
+    <div class="fieldWrapper">
+        <label for="{{ form.cover_image.id_for_label }}">Cover Image:</label>
+        {{ form.cover_image }}
+        {{ form.cover_image.errors }}
+    </div>
+
+    <div class="fieldWrapper">
+        <label for="{{ form.miniature_image.id_for_label }}">Miniature Image:</label>
+        {{ form.miniature_image }}
+        {{ form.miniature_image.errors }}
+    </div>
+
+    <div class="fieldWrapper">
+        <label for="{{ form.tags.id_for_label }}">Tags:</label>
+        {{ form.tags }}
+        {{ form.tags.errors }}
+    </div>
     <button type="submit">{% if form.instance.pk %}Update{% else %}Create{% endif %}</button>
 </form>
-<a href="{% url 'review_list' %}">Back to Reviews</a>
+<a href="{% url 'review_list' ticket.pk %}">Back to Reviews</a>
 {% endblock %}
