--- a/LITRevu/reviews/static/css/reviews_styles.css
+++ b/LITRevu/reviews/static/css/reviews_styles.css
@@ -1,8 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #76d673;
-    margin: 0;
-    padding: 0;
+    background-color: #cfbdec;
 }
 
 .stars {
