--- a/LITRevu/reviews/templates/review_confirm_delete.html
+++ b/LITRevu/reviews/templates/review_confirm_delete.html
@@ -5,9 +5,11 @@
 {% block optional_css %}
 <link rel="stylesheet" href="{% static 'css/reviews_styles.css' %}">
 {% endblock %}
+{% block content_title %}
+Delete Review
+{% endblock %}
 
 {% block content %}
-<h1>Delete Review</h1>
 <p>Are you sure you want to delete "{{ review.title }}"?</p>
 <form method="post">
     {% csrf_token %}
