--- a/LITRevu/tickets/static/css/tickets_styles.css
+++ b/LITRevu/tickets/static/css/tickets_styles.css
@@ -1,15 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #76d673;
-    margin: 0;
-    padding: 0;
-}
-
-header {
-    background-color: #343a40;
-    color: white;
-    padding: 1em;
-    text-align: center;
+    background-color: #b9eeb8;
 }
 
 nav {
