--- a/LITRevu/tickets/templates/ticket_list.html
+++ b/LITRevu/tickets/templates/ticket_list.html
@@ -2,9 +2,15 @@
 {% load static %}
 
 {% block title %}Ticket List{% endblock %}
+{% block optional_css %}
+<link rel="stylesheet" href="{% static 'css/tickets_styles.css' %}">
+{% endblock %}
+{% block content_title %}
+Tickets
+{% endblock %}
 {% block content %}
 {% if request.user.is_authenticated %}
-<h2>Tickets</h2>
+  <a href="{% url 'ticket_form' %}">New ticket</a>
   <ul>
     {% for ticket in tickets %}
     {% if not ticket.is_archived %}
@@ -40,7 +46,6 @@
     {% endif %}
     {% endfor %}
   </ul>
-  <a href="{% url 'ticket_form' %}">New ticket</a>
 
   <div id="delete-ticket-modal" class="modal">
     <div class="modal-content">
