--- a/LITRevu/users/static/css/users_styles.css
+++ b/LITRevu/users/static/css/users_styles.css
@@ -1,12 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #1793db;
-    margin: 0;
-    padding: 0;
-}
-
-h1 {
-    color: #333;
+    background-color: #a3d6f3;
 }
 
 .container {
