--- a/LITRevu/users/templates/login.html
+++ b/LITRevu/users/templates/login.html
@@ -4,8 +4,11 @@
 {% block optional_css %}
 <link rel="stylesheet" href="{% static 'css/users_styles.css' %}">
 {% endblock %}
+{% block content_title %}
+Login
+{% endblock %}
+
 {% block content %}
-    <h1>Login</h1>
     <form id="login-form" action="{% url 'login' %}" method="post">
         {% csrf_token %}
         <div>
