--- a/LITRevu/users/templates/register.html
+++ b/LITRevu/users/templates/register.html
@@ -4,8 +4,11 @@
 {% block optional_css %}
 <link rel="stylesheet" href="{% static 'css/users_styles.css' %}">
 {% endblock %}
+{% block content_title %}
+User Registration
+{% endblock %}
+
 {% block content %}
-    <h2>User Registration</h2>
     <form id="registration-form" action="{% url 'register' %}" method="post">
         {% csrf_token %}
         <div>
