--- a/LITRevu/users/templates/update_password.html
+++ b/LITRevu/users/templates/update_password.html
@@ -4,9 +4,11 @@
 {% block optional_css %}
 <link rel="stylesheet" href="{% static 'css/users_styles.css' %}">
 {% endblock %}
+{% block content_title %}
+Edit Password
+{% endblock %}
 
 {% block content %}
-<h2>Edit Password</h2>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
