Aesthetic css update icomoon addition

--- a/LITRevu/app/static/css/variables-wt.css
+++ b/LITRevu/app/static/css/variables-wt.css
@@ -1,5 +1,6 @@
 :root {
     --menu-background-colour: #333;
-    --main-text-colour: white;
+    --menu-text-colour: white;
+    --main-text-colour: #333;
     --main-background-colour: wheat;
 }
