--- a/LITRevu/app/templates/errors/404.html
+++ b/LITRevu/app/templates/errors/404.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'single_page_template.html' %}
 {% load static %}
 {% block title %}LITRevu - 404{% endblock %}
 {% block optional_css %}
