--- a/LITRevu/app/templates/home.html
+++ b/LITRevu/app/templates/home.html
@@ -1,4 +1,4 @@
-{% extends 'base_template.html' %}
+{% extends 'single_page_template.html' %}
 {% block title %}LITRevu - Home{% endblock %}
 {% block content %}
     <h1>Welcome to the Home Page!</h1>
