--- a/LITRevu/reviews/templates/review_confirm_delete.html
+++ b/LITRevu/reviews/templates/review_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends 'base_template.html' %}
+{% extends 'single_page_template.html' %}
 {% load static %}
 
 {% block title %}Delete Review{% endblock %}
@@ -13,7 +13,7 @@ Delete Review
 <p>Are you sure you want to delete "{{ review.title }}"?</p>
 <form method="post">
     {% csrf_token %}
-    <button type="submit">Confirm</button>
+    <button type="submit"><i class="icon-checkmark"></i></button>
 </form>
 <a href="{% url 'review_list' %}">Cancel</a>
 {% endblock %}
