--- a/LITRevu/tickets/templates/ticket_form.html
+++ b/LITRevu/tickets/templates/ticket_form.html
@@ -1,4 +1,4 @@
-{% extends 'base_template.html' %}
+{% extends 'single_page_template.html' %}
 {% load static %}
 
 {% block title %}New Ticket{% endblock %}
@@ -68,7 +68,7 @@ Create Ticket
         {% endif %}
       </div>
     </div>
-    <button type="submit">Submit</button>
+    <button type="submit"><i class="icon-checkmark"></i></button>
   </form>
 {% endblock %}
 
