--- a/LITRevu/users/templates/register.html
+++ b/LITRevu/users/templates/register.html
@@ -1,4 +1,4 @@
-{% extends 'base_template.html' %}
+{% extends 'single_page_template.html' %}
 {% load static %}
 {% block title %}LITRevu - Register{% endblock %}
 {% block optional_css %}
