--- a/LITRevu/app/static/css/styles.css
+++ b/LITRevu/app/static/css/styles.css
@@ -1,6 +1,11 @@
 body {
     font-family: "Garamond", "Times New Roman", Times, serif;
     background-color: #ff71ff;
+    background-image: url('../images/library illustration.jpg');
+    background-blend-mode: luminosity;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     margin: 0;
     padding: 0;
 }
@@ -9,22 +14,38 @@ h1 {
     color: var(--main-text-colour);
 }
 
+i {
+    margin-right: 8px;
+    margin-left: 8px;
+    font-size: 16px;
+}
+
+a {
+    text-decoration: none;
+    color: var(--main-text-colour);
+}
+
+button {
+    background: none;
+    border: none;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
 .main-layout {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     min-height: calc(100vh - 71px);
-}
-
-.main-container {
-    max-width: 80vw;
-    padding: 20px;
-    margin: auto;
-    background-color: var(--main-background-colour);
-    border-radius: 4px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-top: 40px;
 }
 
 .main-title {
@@ -41,14 +62,13 @@ h1 {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    background-color: var(--menu-background-colour);
     margin: 0;
     padding: 24px;
     gap: 40px;
 }
 
 .naviagtion-menu li {
-    color: var(--main-text-colour);
+    color: var(--menu-text-colour);
     list-style: none;
 }
 
@@ -57,6 +77,15 @@ h1 {
     text-decoration: none;
     font-size: 20px;
     font-weight: bold;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-shadow: 1px 3px 5px #00000094;
+    transition: transform 0.3s ease-in;
+}
+
+.naviagtion-menu li a:hover {
+    transform: scale(1.3);
 }
 
 .navigation-menu-left-item {
@@ -74,13 +103,188 @@ h1 {
 footer {
     display: flex;
     flex-direction: row;
-    justify-content: end;
+    justify-content: space-between;
     width: 100%;
     margin-top: 40px;
-    background-color: var(--menu-background-colour);
 }
 
 footer p {
+    color: var(--menu-text-colour);
     margin: 4px 16px;
     font-size: 12px;
+}
+
+.aligned {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.notepad {
+    display: flex;
+    position: relative;
+    background-color: #633e3e;
+    padding: 8px;
+    border-radius: 8px;
+    box-sizing: border-box;
+    overflow: hidden;
+    max-width: 80vw;
+    margin: auto;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-top: 40px;
+}
+
+.page {
+    flex: 1;
+    padding: 16px;
+    box-sizing: border-box;
+    position: relative;
+    background-color: #fff3dd;
+    border-radius: 8px;
+}
+
+.double-page-layout {
+    max-width: calc(100% / 2);
+    min-width: calc(100% / 2);
+}
+
+.page.left {
+    border-right: 1px solid #ccc;
+    padding-right: 32px;
+}
+
+.page.right {
+    border-left: 1px solid #ccc;
+    padding-left: 32px;
+}
+
+.page-content p,
+.page-content div {
+    margin: 0;
+    padding: 10px 0;
+    border-bottom: 1px solid #ccc;
+}
+
+.page-content p:last-child {
+    border-bottom: none;
+}
+
+.spiral {
+    position: absolute;
+    top: 8px;
+    left: calc(100% / 2 - 15px);
+    width: 30px;
+    height: calc(100% - 18px);
+    background-image: url('../images/binder.png');
+    background-repeat: repeat-y;
+    background-size: 100% auto;
+    background-position: top center;
+}
+
+.single-page-spiral {
+    left: 0;
+}
+
+.icon-user-minus,
+.icon-heart,
+.icon-warning,
+.icon-cross,
+.icon-bin,
+.icon-lock {
+    color: rgb(199, 87, 87);
+}
+
+button:hover .icon-user-minus,
+button:hover .icon-heart,
+button:hover .icon-warning,
+button:hover .icon-cross,
+button:hover .icon-bin,
+button:hover .icon-lock,
+a:hover .icon-user-minus,
+a:hover .icon-heart,
+a:hover .icon-warning,
+a:hover .icon-cross,
+a:hover .icon-bin,
+a:hover .icon-lock {
+    color: rgb(252, 152, 152);
+    transform: scale(1.2);
+}
+
+.icon-user-plus,
+.icon-checkmark {
+    color: rgb(94, 165, 94);
+}
+
+button:hover .icon-user-plus,
+button:hover .icon-checkmark,
+a:hover .icon-user-plus,
+a:hover .icon-checkmark {
+    color: rgb(160, 236, 160);
+    transform: scale(1.2);
+}
+
+.icon-heart-broken {
+    color: rgb(150, 107, 161);
+}
+
+button:hover .icon-heart-broken,
+a:hover .icon-heart-broken {
+    color: rgb(219, 182, 228);
+    transform: scale(1.2);
+}
+
+.icon-notification,
+.icon-pencil {
+    color: rgb(199, 147, 80);
+}
+
+button:hover .icon-notification,
+button:hover .icon-pencil,
+a:hover .icon-notification,
+a:hover .icon-pencil {
+    color: rgb(233, 185, 123);
+    transform: scale(1.2);
+}
+
+.icon-eye-plus,
+.icon-plus,
+.icon-pen,
+.icon-arrow-left2,
+.icon-file-text {
+    color: rgb(112, 147, 192);
+}
+
+button:hover .icon-eye-plus,
+button:hover .icon-plus,
+button:hover .icon-pen,
+button:hover .icon-arrow-left2,
+button:hover .icon-file-text,
+a:hover .icon-eye-plus,
+a:hover .icon-plus,
+a:hover .icon-pen,
+a:hover .icon-arrow-left2,
+a:hover .icon-file-text {
+    color: rgb(184, 215, 255);
+    transform: scale(1.2);
+}
+
+.icon-user-minus,
+.icon-heart,
+.icon-user-plus,
+.icon-checkmark, 
+.icon-heart-broken,
+.icon-warning,
+.icon-cross,
+.icon-bin,
+.icon-lock,
+.icon-notification,
+.icon-pencil,
+.icon-eye-plus,
+.icon-plus,
+.icon-pen,
+.icon-arrow-left2,
+.icon-file-text {
+    transition-property: color, transform;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-in;
 }
