--- a/LITRevu/tickets/templates/ticket_list.html
+++ b/LITRevu/tickets/templates/ticket_list.html
@@ -1,4 +1,4 @@
-{% extends 'base_template.html' %}
+{% extends 'double_page_template.html' %}
 {% load static %}
 
 {% block title %}Ticket List{% endblock %}
@@ -10,24 +10,26 @@ Tickets
 {% endblock %}
 {% block content %}
 {% if request.user.is_authenticated %}
-  <a href="{% url 'ticket_form' %}">New ticket</a>
+  <a href="{% url 'ticket_form' %}"><i class="icon-plus"></i><i class="icon-pen"></i></a>
   <ul>
     {% for ticket in tickets %}
     {% if not ticket.is_archived %}
     <li>
         <a href="{% url 'review_list' ticket.pk %}">
-          <h3>{{ ticket.title }}</h3>
+          <h3 class="aligned">
+            {{ ticket.title }}
+            {% if request.user == ticket.author or request.user.is_superuser %}
+              <a href="{% url 'ticket_update' ticket.pk %}"><i class="icon-pencil"></i></a>
+              <a href="#" id="delete-ticket-btn" data-ticket-id="{{ ticket.pk }}"><i class="icon-bin"></i></a>
+            {% endif %}
+          </h3>
           <p>{{ ticket.description }}</p>
           <p>Created at: {{ ticket.created_at }}</p>
-          {% if request.user == ticket.author or request.user.is_superuser %}
-            <a href="{% url 'ticket_update' ticket.pk %}">Edit</a>
-            <a href="#" id="delete-ticket-btn" data-ticket-id="{{ ticket.pk }}">Delete</a>
-          {% endif %}
           <div>
             <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
-            <button class="like-btn" data-ticket-id="{{ ticket.pk }}" data-ticket-url="{% url 'ticket_like' ticket.pk %}">Like</button>
+            <button class="like-btn" data-ticket-id="{{ ticket.pk }}" data-ticket-url="{% url 'ticket_like' ticket.pk %}"><i class="icon-heart"></i></button>
             <span class="likes-count" data-ticket-id="{{ ticket.pk }}">{{ ticket.likes_count }}</span>
-            <button class="dislike-btn" data-ticket-id="{{ ticket.pk }}" data-ticket-url="{% url 'ticket_dislike' ticket.pk %}">Dislike</button>
+            <button class="dislike-btn" data-ticket-id="{{ ticket.pk }}" data-ticket-url="{% url 'ticket_dislike' ticket.pk %}"><i class="icon-heart-broken"></i></button>
             <span class="dislikes-count" data-ticket-id="{{ ticket.pk }}">{{ ticket.dislikes_count }}</span>
         </a>
         </div>
@@ -35,9 +37,8 @@ Tickets
           {% for review in ticket.reviews.all %}
           {% if not review.is_archived %}
             <li>
-              <h4>{{ review.title }}</h4>
+              <a href="{% url 'review_detail' review.pk %}" class="aligned"><h4>{{ review.title }}</h4><i class="icon-eye-plus"></i></a>
               <p>{{ review.content }}</p>
-              <a href="{% url 'review_detail' review.pk %}">Read more</a>
             </li>
           {% endif %}
           {% endfor %}
@@ -46,20 +47,68 @@ Tickets
     {% endif %}
     {% endfor %}
   </ul>
-
-  <div id="delete-ticket-modal" class="modal">
-    <div class="modal-content">
-        <span class="close">&times;</span>
-        <h2>Delete Ticket</h2>
-        <p>Are you sure you want to delete this ticket?</p>
-        <form id="delete-ticket-form">
-            <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
-            <button type="submit">Delete</button>
-        </form>
-    </div>
-  </div>
 {% endif %}
 {% endblock %}
+
+{% block second_page_title %}
+Tickets you might like
+{% endblock %}
+{% block second_page_content %}
+{% if request.user.is_authenticated %}
+  <a href="{% url 'ticket_form' %}"><i class="icon-plus"></i><i class="icon-pen"></i></a>
+  <ul>
+    {% for ticket in tickets %}
+    {% if not ticket.is_archived %}
+    <li>
+        <a href="{% url 'review_list' ticket.pk %}">
+          <h3 class="aligned">
+            {{ ticket.title }}
+            {% if request.user == ticket.author or request.user.is_superuser %}
+              <a href="{% url 'ticket_update' ticket.pk %}"><i class="icon-pencil"></i></a>
+              <a href="#" id="delete-ticket-btn" data-ticket-id="{{ ticket.pk }}"><i class="icon-bin"></i></a>
+            {% endif %}
+          </h3>
+          <p>{{ ticket.description }}</p>
+          <p>Created at: {{ ticket.created_at }}</p>
+          <div>
+            <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
+            <button class="like-btn" data-ticket-id="{{ ticket.pk }}" data-ticket-url="{% url 'ticket_like' ticket.pk %}"><i class="icon-heart"></i></button>
+            <span class="likes-count" data-ticket-id="{{ ticket.pk }}">{{ ticket.likes_count }}</span>
+            <button class="dislike-btn" data-ticket-id="{{ ticket.pk }}" data-ticket-url="{% url 'ticket_dislike' ticket.pk %}"><i class="icon-heart-broken"></i></button>
+            <span class="dislikes-count" data-ticket-id="{{ ticket.pk }}">{{ ticket.dislikes_count }}</span>
+        </a>
+        </div>
+        <ul>
+          {% for review in ticket.reviews.all %}
+          {% if not review.is_archived %}
+            <li>
+              <a href="{% url 'review_detail' review.pk %}" class="aligned"><h4>{{ review.title }}</h4><i class="icon-eye-plus"></i></a>
+              <p>{{ review.content }}</p>
+            </li>
+          {% endif %}
+          {% endfor %}
+        </ul>
+      </li>
+    {% endif %}
+    {% endfor %}
+  </ul>
+{% endif %}
+{% endblock %}
+
+{% block modals %}
+<div id="delete-ticket-modal" class="modal">
+  <div class="modal-content">
+      <span class="close">&times;</span>
+      <h2>Delete Ticket</h2>
+      <p>Are you sure you want to delete this ticket?</p>
+      <form id="delete-ticket-form">
+          <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
+          <button type="submit"><i class="icon-bin"></i></button>
+      </form>
+  </div>
+</div>
+{% endblock %}
+
 {% block js %}
 <script src="{% static 'js/tickets_script.js' %}"></script>
 {% endblock%}
